<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/layout_entertainment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/electronics"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/stay_tuned" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/entertainment" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_household"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/shoes"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/men" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/shoes_men_icon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_formen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/clothing"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/for_men" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/for_men" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_deal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="4dp"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="120dp"
            android:layout_marginRight="120dp"
            android:text="@string/deals_of_the_day"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:src="@drawable/deal" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/layout_hair"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/clothing"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/women" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/clothing_women_icon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_phones"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/phones"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/for_all" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/phone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_formen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/shoes"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/women" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/shoes_women_icon" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>